Fixed grid issues and fixed cards from overlapping the whole page

--- a/styles.css
+++ b/styles.css
@@ -6,21 +6,24 @@ html {
   body {
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1rem;
-    background-color: lightcyan;
+    background-image: url("./pineapple-bg.jpg");
+    background-size: cover;
+    background-color: gray;
     padding: 10px;
     margin: 0;
   }
   
   h1 {
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 1.5rem;
-    color: green;
+    color: dimgrey;
     text-align: center;
     padding: 18px 0 18px 0;
     margin: 0 0 10px 0;
   }
   h2 {
     font-size: 1.5rem;
-    color: green;
+    color: darkgrey;
     text-align: center;
     padding: 18px 0 18px 0;
     margin: 0 0 10px 0;
@@ -32,30 +35,70 @@ html {
     margin: 0;
     color: #000000;
   }
-  
+
   .img-circle {
     border: 8px solid white;
-    border-radius: 25%;
+    border-radius: 50%;
   }
-  
-  .section {
-    background-color: #fff;
-    padding: 20px;
-    margin-bottom: 10px;
-    border-radius: 30px;
-  }
-  
-  #header {
-    background-image: url("./pineapple-bg.jpg");
-    background-size: cover;
-    background-repeat: no-repeat;
-  }
-  
-  #header img {
-    display: block;
+
+  .float-child img {
     width: 250px;
     height: 250px;
     margin: auto;
+  }
+
+  .float-container {
+    padding: 30px;
+    }
+
+.float-child {
+    width: 50%;
+    float: left;
+    padding: 20px;
+    
+} 
+
+
+
+  
+.about-section {
+    background-color: gainsboro;
+    padding: 20px;
+    margin-bottom: 10px;
+    border-radius: 30px;
+    opacity: 0.9;
+}
+
+
+  .section {
+    background-color: #7B7B7C;
+    padding: 20px;
+    margin-bottom: 10px;
+    border-radius: 30px;
+    opacity: 0.9;
+    
+    
+  }
+
+ 
+
+
+  
+  #header {
+    /* background-image: url("./pineapple-bg.jpg"); */
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-color: #7B7B7C;
+  }
+  
+
+
+  .footer {
+      background-color: #7B7B7C;
+      background-size: cover;
+      display: block;
+      height: 100px;
+      margin: auto;
   }
   
 
